--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Rick Waldron</title>
 </head>
 <body>
+    <h1>This website is currencly under construction.</h1>
+    <p>In the meantime, here are some of the projects I have completed lately:</p>
     <a href="Archery Club/index.html">Bendigo Target Archery Club</a><br>
     <a href="Restaurant/Home.html">Garden Indian Restaurant</a><br>
     <a href="Travel Form/index.html">Travel Form</a><br>
