--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 <body>
     <h1>This website is currencly under construction.</h1>
     <p>In the meantime, here are some of the projects I have completed lately:</p>
-    <a href="Archery Club/index.html">Bendigo Target Archery Club</a><br>
-    <a href="Restaurant/Home.html">Garden Indian Restaurant</a><br>
-    <a href="Travel Form/index.html">Travel Form</a><br>
+    <ul>
+        <li><a href="Archery Club/index.html">Bendigo Target Archery Club</a><br></li>
+        <li><a href="Restaurant/Home.html">Garden Indian Restaurant</a><br></li>
+        <li><a href="Travel Form/index.html">Travel Form</a><br></li>
+    </ul>
+    
 </body>
 </html>
