--- a/index.html
+++ b/index.html
@@ -7,13 +7,43 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
   <body>
-    <h1>This website is currently under construction</h1>
-    <p>In the meantime, here are some of the projects I have completed lately:</p>
-    <ul>
-        <li><a href="Restaurant/Home.html">Garden Indian Restaurant</a><br></li>
-        <li><a href="Travel Form/index.html">Travel Form</a><br></li>
-        <li><a href="Archery Club/index.html">Bendigo Target Archery Club</a><br></li>
-    </ul>
+
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Rick Waldron</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    
+    <div class="container theme-showcase" role="main">
+
+      <div class="jumbotron">
+        <h1>This website is currently under construction</h1>
+        <p>In the meantime, here are some of the projects I have completed lately:</p>
+        <ul>
+          <li><a href="Restaurant/Home.html">Garden Indian Restaurant</a><br></li>
+          <li><a href="Travel Form/index.html">Travel Form</a><br></li>
+          <li><a href="Archery Club/index.html">Bendigo Target Archery Club</a><br></li>
+        </ul>
+      </div>
+
+    </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+
   </body>
 </html>
