--- a/index.html
+++ b/index.html
@@ -1,49 +1,54 @@
 <!doctype html>
 <html lang="en">
+
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Rick Waldron</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
+
   <body>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Rick Waldron</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    
-    <div class="container theme-showcase" role="main">
-
-      <div class="jumbotron">
-        <h1>This website is currently under construction</h1>
-        <p>In the meantime, here are some of the projects I have completed lately:</p>
-        <ul>
-          <li><a href="Restaurant/Home.html">Garden Indian Restaurant</a><br></li>
-          <li><a href="Travel Form/index.html">Travel Form</a><br></li>
-          <li><a href="Archery Club/index.html">Bendigo Target Archery Club</a><br></li>
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#">Rick Waldron</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link">Blog</a>
+          </li>
         </ul>
+        <form role="search">
+          <input class="form-control" type="search" placeholder="Search">
+        </form>
       </div>
-
     </div>
+  </nav>
+
+  <main class="container pt-5">
+    <div class="bg-light p-5 mt-5 rounded">
+      <h1>This website is currently under construction</h1>
+      <p class="lead">In the meantime, here are some of the projects I have completed lately:</p>
+      <ul>
+        <li><a href="Restaurant/Home.html">Garden Indian Restaurant</a><br></li>
+        <li><a href="Travel Form/index.html">Travel Form</a><br></li>
+        <li><a href="Archery Club/index.html">Bendigo Target Archery Club</a><br></li>
+      </ul>
+    </div>
+  </main>
     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
   </body>
+
 </html>
