Set up each page

--- a/about.html
+++ b/about.html
@@ -6,10 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Home</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/all.min.css">
     <script src="/js/jquery-3.6.1.min.js"></script>
     <script src="/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/all.min.js"></script>
     <script> 
     $(function(){
       $("#header").load("/template/header.html"); 
@@ -24,13 +22,15 @@
 
   <main class="container pt-5">
     <div class="bg-light p-5 mt-5 rounded">
-      <h1>Home</h1>
+      <h1>About</h1>
       <br>
-      <p class="lead">Hi, I'm Rick. I'm currently studying Software Development.</p>
-      <p class="lead">This website has some more information about me, links to projects I've worked on and a blog.</p>
+      <p class="lead">I'm studying a Graduate Diploma of IT (Software Development) at the University of Southern Queensland. 
+        I also have a Bachelor of Teaching with Bachelor of Science from the University of Adelaide. 
+        I taught Mathematics and Physics for 7 years and am now pursuing a career in software development.</p>
+      <p class="lead">My interests include travel, reading, soccer and running.</p>
     </div>
   </main>
-  
+
   <div id="footer"></div>
 
   </body>
