--- a/projects.html
+++ b/projects.html
@@ -6,10 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Home</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/all.min.css">
     <script src="/js/jquery-3.6.1.min.js"></script>
     <script src="/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/all.min.js"></script>
     <script> 
     $(function(){
       $("#header").load("/template/header.html"); 
@@ -24,13 +22,16 @@
 
   <main class="container pt-5">
     <div class="bg-light p-5 mt-5 rounded">
-      <h1>Home</h1>
+      <h1>Projects</h1>
       <br>
-      <p class="lead">Hi, I'm Rick. I'm currently studying Software Development.</p>
-      <p class="lead">This website has some more information about me, links to projects I've worked on and a blog.</p>
+      <ul class="lead">
+        <li><a href="/projects/Restaurant/Home.html">Garden Indian Restaurant</a><br></li>
+        <li><a href="/projects/Travel Form/index.html">Travel Form</a><br></li>
+        <li><a href="/projects/Archery Club/index.html">Bendigo Target Archery Club</a><br></li>
+      </ul>
     </div>
   </main>
-  
+    
   <div id="footer"></div>
 
   </body>
