--- a/blog.html
+++ b/blog.html
@@ -6,14 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Home</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <script src="/js/jquery-3.6.1.min.js"></script>
-    <script src="/js/bootstrap.bundle.min.js"></script>
-    <script> 
-    $(function(){
-      $("#header").load("/template/header.html"); 
-      $("#footer").load("/template/footer.html"); 
-    });
-    </script> 
+    <link rel="stylesheet" href="/css/all.min.css">
   </head>
 
   <body>
@@ -31,6 +24,16 @@
   </main>
   
   <div id="footer"></div>
+
+  <script src="/js/jquery-3.6.1.min.js"></script>
+  <script src="/js/bootstrap.bundle.min.js"></script>
+  <script src="/js/all.min.js"></script>
+  <script> 
+    $(function(){
+      $("#header").load("/template/header.html"); 
+      $("#footer").load("/template/footer.html"); 
+    });
+  </script>  
 
   </body>
 
