--- a/index.html
+++ b/index.html
@@ -7,15 +7,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/all.min.css">
-    <script src="/js/jquery-3.6.1.min.js"></script>
-    <script src="/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/all.min.js"></script>
-    <script> 
-    $(function(){
-      $("#header").load("/template/header.html"); 
-      $("#footer").load("/template/footer.html"); 
-    });
-    </script> 
+    
   </head>
 
   <body>
@@ -27,11 +19,21 @@
       <h1>Home</h1>
       <br>
       <p class="lead">Hi, I'm Rick. I'm currently studying Software Development.</p>
-      <p class="lead">This website has some more information about me, links to projects I've worked on and a blog.</p>
+      <p class="lead">This website has some more information <a href="about.html">about me</a>, links to <a href="projects.html">projects</a> I've worked on and a <a href="blog.html">blog</a>.</p>
     </div>
   </main>
   
   <div id="footer"></div>
+
+  <script src="/js/jquery-3.6.1.min.js"></script>
+  <script src="/js/bootstrap.bundle.min.js"></script>
+  <script src="/js/all.min.js"></script>
+  <script> 
+    $(function(){
+      $("#header").load("/template/header.html"); 
+      $("#footer").load("/template/footer.html"); 
+    });
+  </script> 
 
   </body>
 
