--- a/projects.html
+++ b/projects.html
@@ -6,14 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Home</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <script src="/js/jquery-3.6.1.min.js"></script>
-    <script src="/js/bootstrap.bundle.min.js"></script>
-    <script> 
-    $(function(){
-      $("#header").load("/template/header.html"); 
-      $("#footer").load("/template/footer.html"); 
-    });
-    </script> 
+    <link rel="stylesheet" href="/css/all.min.css">
   </head>
 
   <body>
@@ -25,6 +18,7 @@
       <h1>Projects</h1>
       <br>
       <ul class="lead">
+        <li>(In development) <a href="https://markr-demo.herokuapp.com/">Exam Marker</a><br></li>
         <li><a href="/projects/Restaurant/Home.html">Garden Indian Restaurant</a><br></li>
         <li><a href="/projects/Travel Form/index.html">Travel Form</a><br></li>
         <li><a href="/projects/Archery Club/index.html">Bendigo Target Archery Club</a><br></li>
@@ -33,6 +27,16 @@
   </main>
     
   <div id="footer"></div>
+
+  <script src="/js/jquery-3.6.1.min.js"></script>
+  <script src="/js/bootstrap.bundle.min.js"></script>
+  <script src="/js/all.min.js"></script>
+  <script> 
+    $(function(){
+      $("#header").load("/template/header.html"); 
+      $("#footer").load("/template/footer.html"); 
+    });
+  </script> 
 
   </body>
 
