--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
       <h1>Projects</h1>
       <br>
       <ul class="lead">
-        <li>(In development) <a href="https://markr-demo.herokuapp.com/">Exam Marker</a><br></li>
+        <li><a href="https://markr-demo.herokuapp.com/">Exam Marker</a><br></li>
         <li><a href="/projects/Restaurant/Home.html">Garden Indian Restaurant</a><br></li>
         <li><a href="/projects/Travel Form/index.html">Travel Form</a><br></li>
         <li><a href="/projects/Archery Club/index.html">Bendigo Target Archery Club</a><br></li>
